[package]
name = "statisticalme"
version = "22.0.3"
authors = ["Antony <dentad@users.noreply.github.com>"]
edition = "2021"

[lib]
name = "statisticalme"
crate-type = ["cdylib"]
path = "src/lib.rs"

[profile.release]
debug = false
lto = true

[dependencies]
pyo3 = { version = "0.16", features = ["extension-module"] }
chrono = { version = "~0.4.19", default-features = false, features = ["clock", "std"] }
chrono-tz = "~0.6.1"
unicode-normalization = "~0.1.19"
