[package]
name = "statisticalme"
version = "22.2.0"
authors = ["Antony <dentad@users.noreply.github.com>"]
edition = "2021"

[lib]
name = "statisticalme"
crate-type = ["cdylib"]
path = "src/lib.rs"

[profile.release]
debug = false
lto = true

[dependencies]
pyo3 = { version = "~0.16", features = ["extension-module"] }
# pyo3-log = "~0.6.0"
# log = "~0.4.16"
chrono = { version = "~0.4.19", default-features = false, features = ["clock", "std"] }
chrono-tz = "~0.6.1"
unicode-normalization = "~0.1.19"
shell-words = "1.1"
dotenv = "~0.15.0"
cli-table = { version = "~0.4", default-features = false }
termcolor = "1.1"
# serenity = { version = "~0.11.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
# tokio = { version = "1.17", features = ["macros", "signal", "rt-multi-thread"] }
# once_cell = "1.10"
