[package]
name = "statisticalme"
version = "22.3.3"
authors = ["Antony <dentad@users.noreply.github.com>"]
edition = "2021"

[lib]
name = "statisticalme"
crate-type = ["cdylib"]
path = "src/lib.rs"

[profile.release]
debug = false
strip = true
# opt-level = ""
lto = true
codegen-units = 1

[dependencies]
pyo3 = { version = "~0.17.1", features = ["extension-module"] }
# pyo3-log = "~0.6.0"
# log = "~0.4.16"
chrono = { version = "~0.4.22", default-features = false, features = ["clock", "std"] }
chrono-tz = "~0.6.3"
unicode-normalization = "~0.1.21"
shell-words = "1.1"
dotenv = "~0.15.0"
cli-table = { version = "~0.4.7", default-features = false }
termcolor = "1.1"
once_cell = "1"
# parking_lot = "~0.12.1"
# serenity = { version = "~0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
# tokio = { version = "1", features = ["macros", "signal", "rt-multi-thread"] }
