[build-system]
requires = ["maturin>=1.3", "wheel"]
build-backend = "maturin"

[project]
name = "statisticalme"
version = "23.1.0"
description = "StatisticalMe"
authors = [ { name = "Antony", email = "dentad@users.noreply.github.com" } ]
requires-python = ">= 3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]
